+ saveOnDisk parameter for images + showImages parameter * renamings, method decompositions and some more changes * in fact - quite massive commit